# ARIGATO

./: .gitignore  README.md  pyproject.toml
data/: sp500.parquet
database/sp500/: data.parquet
src/arigato/: __init__.py  chart.py  download_sp500.py  fetch.py  sp500_chart.py  sp500_data.py
src/arigato/charting/: __init__.py  base.py  render.py  sp500.py
src/arigato/services/: __init__.py
src/arigato/services/chart/: __init__.py
src/arigato/services/donchian_breakout/: __init__.py
src/arigato/services/fetch/: __init__.py
src/arigato/services/following/: __init__.py
src/arigato/services/four_ema/: __init__.py
src/arigato/strategies/: donchian_breakout.py  following.py  four_ema.py
src/arigato/symbols/: __init__.py
src/arigato/symbols/sp500/: __init__.py  chart.py  data.py  download.py
src/arigato/symbols/sp500/schemas/: __init__.py
