[project]
name = "arigato"
version = "0.1.0"
description = "ARIGATO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "matplotlib==3.10",
    "yfinance==1.3.0",
]

[project.scripts]
fetch = "arigato.fetch:main"
chart = "arigato.chart:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
